feat: add daily profit ratio history
